feat: useDispatch added and files refactored

--- a/src/components/product/Product.module.scss
+++ b/src/components/product/Product.module.scss
@@ -62,7 +62,7 @@
 .addToCartButton {
   width: 100%;
   padding: 8px;
-  background-color: #007bff;
+  background-color: #2a59fe;
   color: white;
   border: none;
   border-radius: 4px;
