--- a/src/components/product/Product.module.scss
+++ b/src/components/product/Product.module.scss
@@ -1,12 +1,27 @@
-.productGrid {
+.container {
+  display: grid;
+  grid-template-columns: 0.5fr 3fr 0.5fr;
+  gap: 10px;
+  padding: 16px;
+}
+
+.filterColumn {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px;
+  background-color: #f8f8f8;
+}
+
+.productGrid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   gap: 16px;
 }
 
 .cardContainer {
-  width: 200px;
+  width: 100%;
+  max-width: 200px;
   height: 250px;
   display: flex;
   flex-direction: column;
@@ -15,8 +30,8 @@
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 8px;
-  margin: 16px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
 }
 
 .imageContainer {
@@ -72,4 +87,11 @@
 
 .addToCartButton:hover {
   background-color: #0056b3;
+}
+
+.paginationWrapper {
+  grid-column: 2;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
