--- a/src/components/product-detail/ProductDetail.module.scss
+++ b/src/components/product-detail/ProductDetail.module.scss
@@ -5,11 +5,15 @@
   gap: 10px;
 }
 
+.container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
+}
 .cardContainer {
   display: flex;
   flex-direction: row;
   border: 1px solid #ddd;
-  border-radius: 8px;
   padding: 10px;
   margin: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
