--- a/src/components/product/Product.module.scss
+++ b/src/components/product/Product.module.scss
@@ -1,47 +1,42 @@
 .container {
   display: grid;
-  grid-template-columns: 0.5fr 3fr 0.5fr;
-  gap: 10px;
+  grid-template-columns: 1fr 2fr 1fr;
+  height: 100vh;
   padding: 16px;
 }
 
 .filterColumn {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   padding: 16px;
-  background-color: #f8f8f8;
 }
 
 .productGrid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   gap: 16px;
 }
 
 .cardContainer {
-  width: 100%;
-  max-width: 200px;
-  height: 250px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  justify-content: center;
+  padding: 16px;
   background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  height: auto;
 }
 
 .imageContainer {
   width: 100%;
-  height: 130px;
+  height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #f0f0f0;
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 .productImage {
@@ -51,38 +46,32 @@
 }
 
 .price {
+  font-size: 20px;
   color: #007bff;
-  font-weight: bold;
-  margin-bottom: 4px;
+  margin-bottom: 16px;
 }
 
 .productName {
+  font-size: 24px;
   font-weight: bold;
-  margin-bottom: 4px;
-  text-align: center;
+  margin-bottom: 8px;
 }
 
 .productDescription {
   color: #555;
-  font-size: 12px;
-  margin-bottom: 8px;
-  text-align: center;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
+  font-size: 14px;
+  line-height: 1.5;
 }
 
 .addToCartButton {
-  width: 100%;
-  padding: 8px;
+  padding: 10px 20px;
   background-color: #2a59fe;
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 16px;
+  margin-bottom: 16px;
 }
 
 .addToCartButton:hover {
@@ -90,8 +79,30 @@
 }
 
 .paginationWrapper {
-  grid-column: 2;
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 16px;
+}
+
+.brandFilter,
+.modelFilter {
+  width: 220px;
+  height: 205px;
+  overflow-y: auto;
+  background-color: #f8f8f8;
+  padding: 16px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.brandFilter h3,
+.modelFilter h3 {
+  margin-bottom: 16px;
+}
+
+.brandList,
+.modelList {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
