--- a/src/components/model-filter/ModelFilter.module.scss
+++ b/src/components/model-filter/ModelFilter.module.scss
@@ -1,22 +1,45 @@
-.brandFilter,
 .modelFilter {
   width: 220px;
   height: 205px;
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  font-family: "Montserrat";
   overflow-y: auto;
-  background-color: #f8f8f8;
-  padding: 16px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.brandFilter h3,
-.modelFilter h3 {
-  margin-bottom: 16px;
-}
-
-.brandList,
-.modelList {
   display: flex;
   flex-direction: column;
   gap: 8px;
+  position: relative;
+
+  @media (max-width: 768px) {
+    width: 100%;
+    height: auto;
+  }
+
+  & span {
+    font-weight: bold;
+    color: #2a59fe;
+    margin-bottom: 8px;
+  }
+
+  .searchInput {
+    width: calc(100% - 20px);
+    padding: 8px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    margin-bottom: 8px;
+  }
+
+  .modelList {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+
+    label {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+  }
 }
