--- a/src/components/product/Product.module.scss
+++ b/src/components/product/Product.module.scss
@@ -1,42 +1,48 @@
 .container {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  height: 100vh;
+  grid-template-columns: 0.5fr 3fr 0.5fr;
+  gap: 10px;
   padding: 16px;
 }
 
 .filterColumn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 16px;
+  background-color: #f8f8f8;
+  gap: 30px;
 }
 
 .productGrid {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   gap: 16px;
 }
 
 .cardContainer {
+  width: 100%;
+  max-width: 200px;
+  height: 250px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  padding: 16px;
-  background-color: #fff;
+  border: 1px solid #ddd;
   border-radius: 8px;
+  padding: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  height: auto;
+  background-color: #fff;
 }
 
 .imageContainer {
   width: 100%;
-  height: 300px;
+  height: 130px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #f0f0f0;
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 
 .productImage {
@@ -46,32 +52,38 @@
 }
 
 .price {
-  font-size: 20px;
   color: #007bff;
-  margin-bottom: 16px;
+  font-weight: bold;
+  margin-bottom: 4px;
 }
 
 .productName {
-  font-size: 24px;
   font-weight: bold;
-  margin-bottom: 8px;
+  margin-bottom: 4px;
+  text-align: center;
 }
 
 .productDescription {
   color: #555;
-  font-size: 14px;
-  line-height: 1.5;
+  font-size: 12px;
+  margin-bottom: 8px;
+  text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .addToCartButton {
-  padding: 10px 20px;
+  width: 100%;
+  padding: 8px;
   background-color: #2a59fe;
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 16px;
-  margin-bottom: 16px;
+  font-size: 14px;
 }
 
 .addToCartButton:hover {
@@ -79,30 +91,8 @@
 }
 
 .paginationWrapper {
+  grid-column: 2;
   display: flex;
   justify-content: center;
-  margin-top: 16px;
-}
-
-.brandFilter,
-.modelFilter {
-  width: 220px;
-  height: 205px;
-  overflow-y: auto;
-  background-color: #f8f8f8;
-  padding: 16px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.brandFilter h3,
-.modelFilter h3 {
-  margin-bottom: 16px;
-}
-
-.brandList,
-.modelList {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
+  margin-top: 20px;
 }
