--- a/src/components/product/Product.module.scss
+++ b/src/components/product/Product.module.scss
@@ -20,6 +20,16 @@
   gap: 16px;
 }
 
+.noFoundData {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Monserrat";
+  font-size: 24px;
+}
+
 .cardContainer {
   width: 100%;
   max-width: 200px;
