--- a/src/components/checkout-card/Checkout.module.scss
+++ b/src/components/checkout-card/Checkout.module.scss
@@ -1,9 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
-
 .checkoutContainer {
-  width: 213px;
+  width: 250px;
+  padding: 16px;
   background-color: #fff;
-  padding: 10px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   font-family: "Montserrat";
@@ -12,9 +10,10 @@
   z-index: 1000;
 
   @media (max-width: 768px) {
-    width: 100%;
-    right: 0;
+    position: fixed;
+    bottom: 0;
     left: 0;
+    width: auto;
   }
 }
 
@@ -31,17 +30,16 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 0;
+  text-align: left;
 }
 
 .listItemMeta {
-  text-align: left;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 
-  h4 {
-    margin: 0;
-  }
-
-  p {
-    margin: 0;
+  @media (max-width: 768px) {
+    align-items: start;
   }
 }
 
@@ -88,12 +86,17 @@ button {
   flex-direction: column;
   justify-content: space-between;
   flex-shrink: 0;
+
+  @media (max-width: 768px) {
+    margin-top: 0;
+  }
 }
 
 .totalText {
   font-size: 16px;
   font-weight: 700;
   color: #2a59fe;
+  padding-top: 6px;
 }
 
 .checkoutButton {
