--- a/src/components/product-detail/ProductDetail.module.scss
+++ b/src/components/product-detail/ProductDetail.module.scss
@@ -9,6 +9,11 @@
   display: flex;
   justify-content: space-around;
   margin-top: 50px;
+
+  @media (max-width: 768px) {
+    margin-top: 0;
+    display: block;
+  }
 }
 .cardContainer {
   display: flex;
@@ -22,11 +27,14 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
+
+  @media (max-width: 768px) {
+    width: unset;
+  }
 }
 
 .imageContainer {
-  flex: 0 0 549px;
-  height: 422px;
+  height: 400px;
   display: flex;
   justify-content: center;
   align-items: center;
