--- a/src/components/product/Product.module.scss
+++ b/src/components/product/Product.module.scss
@@ -3,21 +3,34 @@
   grid-template-columns: 0.5fr 3fr 0.5fr;
   gap: 10px;
   padding: 16px;
+
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr;
+    grid-auto-flow: dense;
+  }
 }
 
 .filterColumn {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 16px;
-  background-color: #f8f8f8;
+  padding: 0 16px 0 16px;
+  justify-content: space-between;
   gap: 30px;
+  @media (max-width: 768px) {
+    order: -3;
+  }
 }
 
 .productGrid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 16px;
+
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr 1fr;
+    order: -1;
+  }
 }
 
 .noFoundData {
@@ -26,33 +39,38 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Monserrat";
+  font-family: "Montserrat";
   font-size: 24px;
 }
 
 .cardContainer {
-  width: 100%;
-  max-width: 200px;
-  height: 250px;
+  max-width: 220px;
+  max-height: 275px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: #fff;
+
+  @media (max-width: 768px) {
+    height: unset;
+  }
 }
 
 .imageContainer {
   width: 100%;
-  height: 130px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #f0f0f0;
   margin-bottom: 8px;
+  @media (max-width: 768px) {
+    height: 130px;
+  }
 }
 
 .productImage {
@@ -68,15 +86,16 @@
 }
 
 .productName {
-  font-weight: bold;
   margin-bottom: 4px;
   text-align: center;
+  font-family: "Monserrat";
 }
 
 .productDescription {
   color: #555;
   font-size: 12px;
   margin-bottom: 8px;
+  height: 2px;
   text-align: center;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -105,4 +124,9 @@
   display: flex;
   justify-content: center;
   margin-top: 20px;
+
+  @media (max-width: 768px) {
+    grid-column: 1;
+    order: -2;
+  }
 }
