--- a/src/components/product-detail/ProductDetail.module.scss
+++ b/src/components/product-detail/ProductDetail.module.scss
@@ -56,7 +56,8 @@
 }
 
 .productName {
-  font-weight: bold;
+  font-size: 24px;
+  font-family: "Montserrat";
   margin-bottom: 10px;
   text-align: left;
 }
@@ -66,6 +67,8 @@
   font-weight: bold;
   margin-bottom: 10px;
   text-align: left;
+  font-size: 16px;
+  font-family: "Montserrat";
 }
 
 .addToCartButton {
@@ -85,8 +88,9 @@
 }
 
 .productDescription {
+  font-family: "Montserrat";
   color: #555;
-  font-size: 12px;
+  font-size: 16px;
   text-align: left;
   overflow: hidden;
   text-overflow: ellipsis;
